test/classes/errors/nilability-assign/assign-nonnil-shared-from-oknil-owned.good
assign-nonnil-shared-from-oknil-owned.chpl:8: error: cannot assign to a non-nilable shared variable from a nilable class instance
